# auto-reverse

./: AGENTS.md  BENCHMARK.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DYNAMICS.md  PRIVACY.md  QA.md  RELEASE.md  RESEARCH.md  ROADMAP.md  SECURITY.md  TRACE.md  UPDATES.md  architecture.md  readme.md  recommendation.md  scroll-reverser-parity.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
assets/: AutoReverse.icns
packaging/: dynamics-release-gate.toml
scripts/: build-app-bundle.sh  check-app-bundle.sh  check-dynamics-release-gate.sh  check-install-workflow.sh  check-regression-matrix.sh  check-release-workflow.sh  install-app-bundle.sh  release-app-bundle.sh  uninstall-app-bundle.sh
scripts/lib/: app-bundle.sh
src/: app_session.rs  cli.rs  config.rs  device.rs  device_attribution.rs  device_catalog.rs  device_classifier.rs  device_source.rs  device_test.rs  diagnostics.rs  diagnostics_summary.rs  dynamics_gate.rs  error.rs  event_rate.rs  event_tap.rs  input.rs  input_policy.rs  latency_budget.rs  lib.rs  main.rs  permissions.rs  preset_preview.rs  recovery_audit.rs  refresh_policy.rs  runtime.rs  scroll.rs  scroll_benchmark.rs  scroll_dynamics.rs  scroll_lab.rs  scroll_scheduler.rs  scroll_trace.rs  settings_search.rs  statistics.rs  tap_watchdog.rs  ui.rs  update_policy.rs
src/config/: device_rules.rs  mod.rs  profiles.rs  reset.rs  schema.rs  store.rs
src/config/transfer/: diff.rs  document.rs  mod.rs  secure_file.rs
src/platform/: mod.rs
src/platform/macos/: activation.rs  app_events.rs  daemon_lock.rs  debug_log.rs  event_tap.rs  external_url.rs  gesture.rs  hid.rs  login_item.rs  mod.rs  permissions.rs  power_events.rs  quit_handler.rs  recovery_log.rs  save_panel.rs  scroll_events.rs  startup.rs  tap_metrics.rs  tray.rs
src/platform/macos/tray/: device_rules.rs
src/scroll/: direction.rs
src/scroll_dynamics/: axis.rs  preset.rs  rate.rs
src/scroll_scheduler/: schedule.rs
src/ui/: config_transfer.rs  debug_console.rs  device_rules.rs  local_export.rs  preset_preview.rs  runtime.rs  scroll_benchmark.rs  theme.rs
src/ui/debug_console/: export.rs
tests/: cli_integration.rs  property_invariants.rs
tests/fixtures/config/: invalid-key-catalog.toml  v0-all-fields.toml  v0-minimal-device-rule.toml
