[package]
name = "auto-reverse"
version = "0.1.0"
edition = "2024"

[features]
default = ["gui"]
# The settings window (`auto-reverse ui`), merged with the CGEventTap into
# one process: a native AppKit menu-bar item and SMAppService-based
# login-item registration (objc2-service-management) on top of eframe.
# Off => a lean CLI-only build: cargo build --no-default-features. The lean
# build retains only the small AppKit event/touch surface needed by the public
# Magic Mouse/trackpad classifier; it does not include eframe, windows, menus,
# images, or login-item integration.
gui = [
    "dep:eframe",
    "dep:objc2-service-management",
    "dep:objc2-foundation",
    "dep:block2",
    "objc2-app-kit/NSAppearance",
    "objc2-app-kit/NSImage",
    "objc2-app-kit/NSImageView",
    "objc2-app-kit/NSStatusBar",
    "objc2-app-kit/NSStatusItem",
    "objc2-app-kit/NSStatusBarButton",
    "objc2-app-kit/NSMenu",
    "objc2-app-kit/NSMenuItem",
    "objc2-app-kit/NSBezierPath",
    "objc2-app-kit/NSCell",
    "objc2-app-kit/NSColor",
    "objc2-app-kit/NSGraphicsContext",
    "objc2-app-kit/NSApplication",
    "objc2-app-kit/NSPanel",
    "objc2-app-kit/NSOpenPanel",
    "objc2-app-kit/NSSavePanel",
    "objc2-app-kit/NSWindow",
    "objc2-app-kit/NSWorkspace",
    "objc2-app-kit/block2",
    "objc2-app-kit/objc2-core-foundation",
]

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

# Only platform/macos touches these; the pure core (config, device, input,
# scroll) compiles without any OS framework.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-foundation-sys = "0.8"
core-graphics = { version = "0.25", features = ["highsierra"] }
# glow instead of the default wgpu renderer: much lighter to build, and a
# settings panel needs no GPU compute pipeline.
eframe = { version = "0.35", default-features = false, features = [
    "glow",
    "default_fonts",
    "accesskit",
], optional = true }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "NSEvent",
    "NSResponder",
    "NSTouch",
    "NSView",
    "objc2-core-graphics",
] }
objc2-core-graphics = { version = "0.3", default-features = false, features = [
    "CGError",
    "CGEvent",
    "CGEventTypes",
    "libc",
] }
objc2-service-management = { version = "0.3.2", optional = true }
objc2-foundation = { version = "0.3", optional = true }
objc2 = "0.6"
block2 = { version = "0.6", optional = true }
